--- a/src/SymTrap/sym_trap_paper.tex
+++ b/src/SymTrap/sym_trap_paper.tex
@@ -2,29 +2,29 @@
 
 \section{Abstract}
 Recent advancements in computer vision and machine learning enable autonomous measurement of total knee arthroplasty kinematics through single-plane fluoroscopy.
-However, symmetric implants present challenges in optimization routines, causing 'symmetry traps' and ambiguous poses.
-Achieving clinically robust kinematics measurement requires addressing this issue. We devised an algorithm that converts a 'true' pose to its corresponding 'symmetry trap' orientation.
-From a dataset of nearly 13,000 human supervised kinematics, this algorithm constructs an augmented dataset of 'true' and 'symmetry trap' kinematics, used to train eight classification machine learning algorithms.
-The outputs from the highest-performing algorithm classify kinematics sequences as 'obviously true' or 'potentially ambiguous.'
+However, symmetric implants present challenges in optimization routines, causing “symmetry traps” and ambiguous poses.
+Achieving clinically robust kinematics measurement requires addressing this issue.
+We devised an algorithm that converts a “true” pose to its corresponding “symmetry trap” orientation.
+From a dataset of nearly 13,000 human supervised kinematics, this algorithm constructs an augmented dataset of “true” and “symmetry trap” kinematics, used to train eight classification machine learning algorithms.
+The outputs from the highest-performing algorithm classify kinematics sequences as ``obviously true'' or 'potentially ambiguous.'
 We construct a spline through 'obviously true' poses, and 'ambiguous' poses are compared to the spline to determine correct orientation.
 The machine learning algorithms achieved 88-94\% accuracy on our internal test set and 91-93\% on our external test set.
 Applying our spline algorithm to kinematics sequences yielded 91.1\% accuracy, 94\% specificity, but 67\% sensitivity.
 The accuracy of standard ML algorithms for implants within 5 degrees of a pure-lateral view was 71\%, rising to 88\% beyond 5 degrees.
 This pioneering study systematizes addressing model-image registration issues with symmetric tibial implants.
 High accuracy suggests potential use of ML algorithms to mitigate shape-ambiguity errors in pose measurements from single-plane fluoroscopy.
-Our results also suggest an imaging protocol for measuring kinematics that favors more oblique viewing angles, which could further disambiguate ‘true’ and ‘symmetry trap’ poses.
-
+Our results also suggest an imaging protocol for measuring kinematics that favors more oblique viewing angles, which could further disambiguate “true” and “symmetry trap” poses.
 
 \section{Introduction}
 Measuring total knee arthroplasty (TKA) kinematics from fluoroscopic images has been an important contributor to knee implant design, post-operative assessment, and predictive modeling for wear and failure patterns for nearly 30 years \cite{banksRationaleResultsFixedBearing2019,banks2003HapPaul2004,freglyComputationalWearPrediction2005}.
 However, the application of this technology has been limited to research use by the challenges of performing these measurements quickly and reliably, as they often require expensive equipment and time-consuming processes \cite{banksAccurateMeasurementThreedimensional1996,lafortuneThreedimensionalKinematicsHuman1992,zuffiModelbasedMethodReconstruction1999,mahfouzRobustMethodRegistration2003}.
-Recent advancements in computer vision and machine learning have opened up the possibility of using a single fluoro-camera for fully autonomous TKA kinematic measurement\cite{brobergValidationMachineLearning2023,jensenJointTrackMachine2023}, making it more accessible and cost-effective for hospitals and clinics.
+Recent advancements in computer vision and machine learning have opened up the possibility of using a single fluoro-camera for fully autonomous TKA kinematic measurement \cite{brobergValidationMachineLearning2023,jensenJointTrackMachine2023}, making it more accessible and cost-effective for hospitals and clinics.
 Nonetheless, this approach faces inherent limitations in accurately resolving orientation and location information using only one fluoro-camera view \cite{banksAccurateMeasurementThreedimensional1996,floodAutomatedRegistration3D2018,mahfouzRobustMethodRegistration2003,yamazakiImprovementDepthPosition2004,zuffiModelbasedMethodReconstruction1999}.
 
 One of the key issues researchers encounter when dealing with imaging from a single camera arises from symmetric implant geometries.
-Under a weak perspective/nearly orthographic projection paradigm \cite{szeliskiComputerVisionAlgorithms2022}, symmetric implants have distinct 3D orientations that produce nearly indistinguishable 2-dimensional projective geometry (\cref{fig:symmetry-trap-quadrants}).
+Under a weak perspective/nearly orthographic projection paradigm \cite{szeliskiComputerVisionAlgorithms2022}, symmetric implants have distinct 3D orientations that produce nearly indistinguishable 2-dimensional projective geometry.  (\cref{fig:symmetry-trap-quadrants}).
 Due to the model-image registration process relying on the information present in the 2D fluoroscopic image, this causes multiple local minima for many optimization algorithms.
-Human-supervised kinematics measurements for TKA with symmetric tibial implants frequently rely on the relative location of the fibula in the fluoroscopic image to disambiguate the pose.
+Human-supervised kinematics measurements for TKA with symmetric tibial implants frequently rely on the relative location of the fibula in the fluoroscopic image to disambiguate difficult poses.
 Unfortunately, fully autonomous solutions can’t utilize this reference point, causing difficulty in algorithmic implementation.
 
 \begin{figure}[h!]
@@ -35,25 +35,27 @@ Unfortunately, fully autonomous solutions can’t utilize this reference point, 
 \end{figure}
 
 
-In this paper, we utilize 12,592 images from seven studies that utilized human-supervised TKA kinematics \cite{jennyREGISTRATIONKNEEKINEMATICS2015,kefalaAssessmentKneeKinematics2017,okamotoVivoKneeKinematics2011,palm-vlasakMinimalVariationTop2022,scottCanTotalKnee2016,watanabeKneeKinematicsAnterior2013,watanabeInvivoKinematicsHighflex2016} to explore the potential of a novel method to classify and correct 'symmetry trap' poses in single-plane TKA kinematic measurements.
+In this paper, we utilize 12,592 images from seven studies that utilized human-supervised TKA kinematics \cite{jennyREGISTRATIONKNEEKINEMATICS2015,kefalaAssessmentKneeKinematics2017,okamotoVivoKneeKinematics2011,palm-vlasakMinimalVariationTop2022,scottCanTotalKnee2016,watanabeKneeKinematicsAnterior2013,watanabeInvivoKinematicsHighflex2016} to explore the potential of a novel method to classify and correct ``symmetry trap'' poses in single-plane TKA kinematic measurements.
 The goal is to improve the accuracy and resolution of single-plane TKA measurements and enable more accessible and reliable kinematic data for orthopaedic applications.
 
-This research paper will answer two key questions:  (1) How effectively can machine learning methods distinguish between 'true' and 'symmetry trap' poses in cases involving symmetric implants? (2) How well can we systematically correct 'symmetry traps' arising in kinematics sequences obtained from fluoroscopic images?
+This research paper will answer two key questions:  (1) How effectively can machine learning methods distinguish between ``true'' and 'symmetry trap' poses in cases involving symmetric implants? (2) How well can we systematically correct ``symmetry traps'' arising in kinematics sequences obtained from fluoroscopic images?
 
 \section{Methods}
 \subsection{Study Design and Sample}
-In this paper, we are addressing the issue of ‘symmetry traps’ in TKA kinematics measurements from single-plane fluoroscopy.
-In order to do so, we take a data-driven approach.
-We start with a collection of human-supervised 'true' kinematic measurements, then determine the respective 'symmetry trap' orientation using a novel algorithm.
-Using this collection of both ‘true’ and ‘symmetric’ poses, we train eight different machine learning classifiers and evaluate their performance on both an internal and external test set. We then take the highest performing classifier and use it to establish an algorithm that takes as input a contiguous sequence of kinematics measurements, and imposes continuity constraints to fix 'symmetry traps' in real-world data.
+In this paper, we are addressing the issue of “symmetry traps” in TKA kinematics measurements from single-plane fluoroscopy.
+To do so, we take a data-driven approach.
+We start with a collection of human-supervised “true” kinematic measurements, then determine the respective “symmetry trap” orientation using a novel algorithm.
+Using this collection of both “true” and “symmetric” poses, we train eight different machine learning classifiers and evaluate their performance on both an internal and external test set.
+However, for more ambiguous poses, it is typically the case that both the “symmetry trap” and “true” pose appear “true”.
+To account for these, we then take the highest performing classifier and use it to establish an algorithm that takes as input a contiguous sequence of kinematics measurements, and imposes continuity constraints to fix “symmetry traps” in real-world data.
 We report the performance of our cubic spline correction algorithm on a dataset of autonomously measured kinematics \cite{jensenJointTrackMachine2023}.
 All programs were written in Python 3.10.
 
-The dataset used for development of the methodology comprises seven total studies \cite{jennyREGISTRATIONKNEEKINEMATICS2015,kefalaAssessmentKneeKinematics2017,okamotoVivoKneeKinematics2011,palm-vlasakMinimalVariationTop2022,scottCanTotalKnee2016,watanabeKneeKinematicsAnterior2013,watanabeInvivoKinematicsHighflex2016} comprising 12,592 frames of radiographic data.
+The dataset used for development of the methodology comprises seven total studies \cite{jennyREGISTRATIONKNEEKINEMATICS2015,kefalaAssessmentKneeKinematics2017,okamotoVivoKneeKinematics2011,palm-vlasakMinimalVariationTop2022,scottCanTotalKnee2016,watanabeKneeKinematicsAnterior2013,watanabeInvivoKinematicsHighflex2016} comprising 12,592 images of radiographic data.
 We completely withheld data from one study \cite{okamotoVivoKneeKinematics2011} during training to use later as an external test set.
 
 \subsection{Determining Symmetric Orientations}
-First, 'symmetry trap' poses were identified from 'true' poses through a novel algorithm devised to “flip” any given pose into its symmetric counterpart (\cref{fig:sym-flipper-alg}). The algorithm proceeds as follows:
+First, ``symmetry trap'' poses were identified from ``true'' poses through a novel algorithm devised to “flip” any given pose into its symmetric counterpart (\cref{fig:sym-flipper-alg}). The algorithm proceeds as follows:
 
 \begin{enumerate}
   \item Determine the viewing ray from the object origin to the camera origin. Denote this as $\vec{v}$, where $||\vec{v}|| = 1$.
@@ -76,9 +78,9 @@ For each projective geometry, there exist exactly two poses (i.e., a dyad) that 
 \end{figure}
 
 \subsection{Constructing Dataset}
-We collected data from seven studies utilizing human supervised total knee arthroplasty kinematics, totaling approximately 12,592 individual frames.
-Anatomic tibiofemoral kinematics were stored as 'true' poses.
-The proposed algorithm was then applied to each frame's tibial implant, generating corresponding “symmetric” poses, for a total of 25,184 samples (\cref{fig:sym-trap-dataset}).
+We collected data from seven studies utilizing human supervised total knee arthroplasty kinematics, totaling approximately 12,592 individual images.
+Anatomic tibiofemoral kinematics were stored as ``true'' poses.
+The proposed algorithm was then applied to each image's tibial implant, generating corresponding “symmetric” poses, for a total of 25,184 samples (\cref{fig:sym-trap-dataset}).
 Solid angle distances ($\psi$) obtained from the symmetry flipper algorithm were also stored, and the dataset was stratified based on the solid-angle value and split into 67\% training and 33\% testing sets for unbiased evaluation.
 Data from one study \cite{okamotoVivoKneeKinematics2011} was completely withheld from training to be used as an external test set.
 
@@ -91,7 +93,7 @@ Thus, for each sample, the input was $\{\theta_{Int/Ext}, \theta_{Flx/Ext}, \the
   \label{fig:sym-trap-dataset}
 \end{figure}
 \subsection{Classification Algorithms}
-In this study, we implemented a selection of classification algorithms (Table 1) from Scikit-learn \cite{scikit-learn} to distinguish between 'true' and 'symmetry trap' poses.
+In this study, we implemented a selection of classification algorithms that use a range of different learning strategies (Table 1) from Scikit-learn \cite{scikit-learn} to classify any individual input pose as  ``true'' or ``symmetry trap''.
 The chosen algorithms were K-Nearest-Neighbors (KNN) \cite{fixDiscriminatoryAnalysisNanparametric1951},
 Support Vector Machines (SVM) \cite{cortesSupportvectorNetworks1995}, AdaBoost \cite{friedmanGreedyFunctionApproximation2001},
 Histogram Gradient Boosting \cite{freundDecisionTheoreticGeneralizationOnLine1997},
@@ -101,119 +103,114 @@ and (majority) Voting Classifier.
 The hyperparameters for each method were tuned using stratified 5-fold cross validation using grid-search to test all possible combinations.
 Stacked generalization and the voting classifier used the tuned hyperparameters from each of the other estimators in their predictions.
 We recorded sensitivity \cite{yerushalmyStatisticalProblemsAssessing1947}, specificity \cite{yerushalmyStatisticalProblemsAssessing1947}, accuracy \cite{internationalorganizationforstandardizationAccuracyTruenessPrecision2023},
-and the F1 score \cite{tahaMetricsEvaluating3D2015} for each algorithm on our test set.
-We also report these metrics of the highest performing individual classifier on stratified partitions of the test set to determine relative performance for different $\psi$ values.
+and the F1 score \cite{tahaMetricsEvaluating3D2015} for each algorithm on both our internal and external test sets.
+For the highest performing individual classifier on the internal test set, we also evaluated these metrics on stratified partitions of the internal test set to determine relative performance for different $\psi$ values.
 
 
 \subsection{Fixing Incorrect Symmetry Trap Poses}
-The primary objective of this study is to accurately measure the kinematics of all frames in a TKA kinematics sequence and to robustly fix incorrect symmetry trap poses.
-However, due to the inability to know a-priori which poses are `true' and in a `symmetry trap', we must employ a separate procedure for systematically correcting individual frames.
+The primary objective of this study is to accurately measure the kinematics of all images in a TKA kinematics sequence and to robustly fix incorrect symmetry trap poses.
+However, due to the inability to know a-priori which poses are “true” or in a “symmetry trap”, we must employ a separate procedure for systematically correcting individual images.
 Thus, for every kinematics sequence we employ the following procedure:
 
 \begin{enumerate}
-  \item Determining Ambiguous and Non-ambiguous Poses for each frame
+  \item Determining Ambiguous and Non-ambiguous Poses for each image
         \begin{enumerate}
-          \item For each frame, we generate the `symmetric' pose corresponding to the input pose.
+          \item For each image, we generate the `symmetric' pose corresponding to the input pose.
           \item We run both the input and its symmetric pose through the highest performing classification algorithm.
-          \item If the input pose and its symmetric pose are differently labeled by the classifier (i.e., one is labeled 'true', and the other 'symmetry trap'), take the pose labeled 'true' as the actual pose.
-          \item If both poses return the same label (i.e., both 'true' or both 'symmetry trap'), label the pose as “ambiguous” and move to step 2.
+          \item If the input pose and its symmetric pose are differently labeled by the classifier (i.e., one is labeled ``true'', and the other ``symmetry trap''), take the pose labeled ``true'' as the actual pose.
+          \item If both poses return the same label (i.e., both ``true'' or both ``symmetry trap''), label the pose as “ambiguous” and move to step 2.
           \item If no poses were labeled “ambiguous”, the procedure is finished.
         \end{enumerate}
   \item Constuction of 3-Dimensional cubic b-spline of the movement
         \begin{enumerate}
-          \item A spline is individually fit through the flexion/extension, internal/external rotation, and adduction/abduction angles for all frames that were {\bf not} labeled ambiguous.
+          \item A spline is individually fit through the flexion/extension, internal/external rotation, and adduction/abduction angles for all images that were {\bf not} labeled ambiguous.
         \end{enumerate}
   \item Correcting Ambiguous Poses
         \begin{enumerate}
-          \item We sample the cubic spline at frame locations of ambiguous poses.
+          \item We sample the cubic spline at image locations of ambiguous poses.
           \item We compare the solid-angle difference between the input and symmetric pose to the pose at the sampled spline location.
           \item Whichever pose is closer to the spline, we take this as the `true' pose.
         \end{enumerate}
 \end{enumerate}
 
 To evaluate this procedure, we used a dataset of kinematics generated from a fully autonomous method \cite{jensenJointTrackMachine2023} to emulate the real-world use case of this algorithm as a post-processing operation.
-This test set has robustly quantified the presence of `symmetry traps', and so allows us to report sensitivity, specificity, accuracy, and the F1 measure of its ability to correct symmetry traps in a clinical setting.
+This test set has robustly quantified the presence of “symmetry traps”, and so allows us to report sensitivity, specificity, accuracy, and the F1 measure of its ability to correct symmetry traps in a clinical setting.
+
 
 \section{Results}
 \subsection{Machine Learning Classification Performance}
-Classification accuracy ranged from 87.8\% to 94.0\%, sensitivity ranged from 92.9\% to 94.7\%, and specificity ranged from 83.5\% to 93.6\% for all eight methods evaluated (Table 1).
+Classification accuracy on the internal test set ranged from 87.8\% to 94.0\%, sensitivity ranged from 92.9\% to 94.7\%, and specificity ranged from 83.5\% to 93.6\% for all eight methods evaluated (Table 1).
 Stacked generalization and the voting classifier tended to outperform the other classifiers, as they both incorporated a combination of the other models in their decision-making.
-For the external test set (Table 1), the Support Vector Machine with Radial Basis Function kernel had the highest accuracy and F1 score, at 94\% and 0.94 respectively.
-Stacked generalization performed slightly worse in the external test set.
-Overall, the performance in the external test set was comparable to the performance on the internel test set, with some classifiers seeing decreased performance (K-Nearest-Neighbors, Stacked Generalization), and others seeing slightly increased performance (Support Vector Machines, AdaBoost, Voting Classifer).
+For the external test set, accuracy ranged from 90.9\% to 94.2\%, sensitivity from 93.6\% to 97\%, and specificity from 88.4\% to 91.9\%  (Table 1).
+The SVM with Radial Basis Function kernel had the highest accuracy and F1 score, at 94\% and 0.94 respectively. Stacked generalization performed slightly worse in the external test set.
+Overall, the performance in the external test set was comparable to the performance on the internal test set, with some classifiers seeing decreased performance (K-Nearest-Neighbors, Stacked Generalization), and others seeing slightly increased performance (Support Vector Machines, AdaBoost, Voting Classifier).
 
 \begin{figure}
   \centering
   \includegraphics*[width=0.95\linewidth]{./figures/raster/sym-trap-ML-table.png}
 \end{figure}
+
+\subsection{Stratified $\psi$ Test Set Performance}
+As the value of $\psi$ increases, the performance of stacked generalization classification increases (Table 2).
+At values closer to a pure-lateral view (~$0^{\circ}$), accuracy is roughly 71\%, and once the implants exceed 5 off-lateral, accuracy increases to above 88\%.
+
 \begin{figure}
   \centering
   \includegraphics*[width=0.95\linewidth]{./figures/raster/stratified-psi-ML-table.png}
 \end{figure}
 
-\subsection{Stratified $\psi$ Test Set Performance}
-As the value of $\psi$ increases, the performance of stacked generalization classification increases (Table 2).
-At values closer to a pure-lateral view (~0), accuracy is roughly 71\%, and once the implants exceed 5 off-lateral, accuracy increases to above 88\%. See Appendix A for visualization of different test sets.
-
 \subsection{Symmetry Trap Correction Performance}
 When applying the procedure to correct symmetry traps, we achieve an accuracy of 91.1\%, a sensitivity of 67.4\% and a specificity of 94\% on an external test set.
-The average “distance to symmetric pose” ($\psi$) was  for the frames correctly classified, and  for the frames incorrectly classified.
-For our initial internal test set, the distance to the symmetric pose was  for frames correctly classified, and  for incorrectly classified frames.
-From this, we can see that the incorrect frames are much closer to a true lateral single-plane image, meaning the difference between the symmetric dyad of poses is smaller.
+The average “distance to symmetric pose” ($\psi$) was $16.6^{circ}$ for the images correctly classified, and $7.12^{\circ}$ for the images incorrectly classified.
+For our initial internal test set, the distance to the symmetric pose was $25.6^{\circ}$ for images correctly classified, and $9.65^{\circ}$ for incorrectly classified images.
+Thus, the incorrect images are closer to a true lateral single-plane image, meaning the difference between the symmetric dyad of poses is smaller.
 
 \section{Discussion}
-Orthopaedic surgeons would value a practical method to quantify TKA kinematics clinically for post-operative assessment or exploration of unsatisfactory outcomes \cite{banksWhatPostoperativeOutcome2017}.
-To date, research methods for quantifying TKA kinematics from single-plane radiographic images have been too time-consuming for clinical use, but the application of machine learning methods has been rapidly improving their convenience \cite{jensenJointTrackMachine2023}.
+Orthopaedic surgeons desire a practical method to clinically quantify TKA kinematics for post-operative assessment or exploration of unsatisfactory outcomes \cite{banksWhatPostoperativeOutcome2017}.
+To date, manual methods for quantifying TKA kinematics from single-plane radiographic images have been too time-consuming for clinical use. However, the application of machine learning methods has significantly enhanced their convenience\cite{jensenJointTrackMachine2023}.
+Modern autonomous kinematics measurement software, implemented on a modest laptop with a dedicated graphics card, demonstrats efficient processing capabilities, requiring approximately 5–15 seconds for analyzing a single image \cite{jensenJointTrackMachine2023}.
 A critical step in making this technology ready for clinical use is to address the pose ambiguity issue that arises from single-camera views of symmetric tibial implant components in a time-efficient manner.
 We found that several machine learning algorithms were able to robustly identify and correct symmetric erroneous poses with greater than 90\% accuracy, making these measurement methods sufficiently autonomous and robust to be considered for clinical use.
 
-
-We demonstrated that classical machine learning techniques are extremely adept at handling the classification of 'true' and 'symmetry trap' TKA kinematics measurements from single-plane fluoroscopy.
+We demonstrated that classical machine learning techniques are extremely adept at handling the classification of “true” and “symmetry trap” TKA kinematics measurements from single-plane fluoroscopy.
+As a first study in this domain, benchmark comparisons with other metrics, datasets, or algorithms are not available.
 As a first study in this domain, benchmark comparisons with other metrics, datasets, or algorithms are not available.
 However, an accuracy level of at least 87\% establishes a useful performance benchmark in terms of clinical applications of these methods and for future research in this field.
 As expected, stacked generalization \cite{wolpertStackedGeneralization1992,smythLinearlyCombiningDensity1999}, where “the worst possible performance is the highest of any individual estimator” held true for our internal test set, and outperformed all other algorithms.
-Interestingly, the same trend did not hold for our external test set, which contained kinematics from patients, imaging machines, and surgeons that were completely withheld from training.
-In our external test set, SVMs with radial basis function kernel seems to outperform the other classifiers.
+Interestingly, the same trend did not hold for our external test set, which contained kinematics from patients, imaging machines, and surgeons that were completely withheld from training. In our external test set, SVMs with radial basis function kernel seems to outperform the other classifiers.
 
 
 Our symmetry trap correction procedure has strong performance in the accuracy ($>91\%$) and specificity ($>94\%$).
-We note decreased sensitivity related to decreasing values of our  term, consistent with intuition: when two possible poses are closer together, they are harder to disambiguate.
-When performance is measured based on $\psi$ values greater than 5 or 10 degrees, we see that our symmetry trap correction algorithm boasts performance similar to that of the stacked generalization estimator (Table 2).
-Previous work has also shown an increase in the prevalence of symmetry traps in low- poses \cite{jensenJointTrackMachine2023}.
+We note decreased sensitivity related to decreasing values of our $\psi$ term, consistent with intuition: when two possible poses are closer together, they are harder to disambiguate.
+When performance is measured based on $\psi$ values greater than 5 or 10 degrees, we see that our symmetry trap correction algorithm boasts notably increased performance (Table 2).
+Previous work has also shown an increase in the prevalence of symmetry traps in low-$\psi$ poses \cite{jensenJointTrackMachine2023}.
 We also note that in real-world data, we have imbalanced class representation because most symmetry traps are caught in the initial kinematics measurement, leaving only the most difficult cases for this algorithm to correct.
 These reasons both culminate with an expected decreased sensitivity when trying to correct symmetry trap poses.
-Future work might be able to address this problem using time-series machine learning algorithms like recurrent neural networks \cite{hochreiterLongShortTermMemory1997} and transformers \cite{vaswaniAttentionAllYou2017} to isolate specific frames that have fallen into symmetry traps based on local and global relationships with other kinematics in that particular sequence.
+Future work might be able to address this problem using time-series machine learning algorithms like recurrent neural networks \cite{hochreiterLongShortTermMemory1997} and transformers \cite{vaswaniAttentionAllYou2017} to isolate specific images that have fallen into symmetry traps based on local and global relationships with other kinematics in that particular sequence.
 Additionally, 3D geometries could be used to impose penetration and separation penalties that are further used to refine ambiguous poses.
 
 
 The performance of autonomous measurements of single-plane fluoroscopy kinematics measurements already achieve clinically acceptable levels of error.
-Despite this, measurement errors still occur and roughly 67\% of frames that are incorrectly optimized fall into symmetry traps \cite{jensenJointTrackMachine2023,brobergValidationMachineLearning2023}.
+Despite this, measurement errors still occur and roughly 67\% of images that are incorrectly optimized fall into symmetry traps \cite{jensenJointTrackMachine2023,brobergValidationMachineLearning2023}.
 With the techniques proposed in this work, we can drastically improve the overall performance of autonomous single-plane TKA kinematics measurements and remove the largest source of inaccuracy.
 
 
-Stratifying measurement performance by  (Table 3), it is clear that the joint viewing perspective is a dominant contributor to pose ambiguities.
-This suggests a modification to imaging protocols for measuring TKA kinematics to minimize the number of frames that fall into the “ambiguous zone”.
-Instead of “pure lateral” imaging that attempts to perfectly center the knee in the image frame, we suggest positioning the center of the knee 1-2 inches away from the center of projection, and to rotate the plane of the observed leg by 5 degrees from parallel with the image detector.
-These small adjustments to the imager/patient alignment would cause all kinematics to have >5, which improves classification accuracy by at least 20\%. Similar imaging protocol improvements have been proposed for bi-plane RSA \cite{niesenReorientingTibialBaseplate2020}.
-This study has some limitations. In this study, we use human-supervised kinematics from single-plane images, where there is always the possibility that the human operator fell into error when distinguishing between 'true' and 'symmetry trap' poses in a sequence of images. This can occur due to a myriad of factors, including low image quality and near-lateral imaging angles. To mitigate this, validated ground truth kinematics are necessary to create a robust algorithm without any errors in the training data.
+Stratifying measurement performance by  (Table 2), it is clear that the joint viewing perspective is a dominant contributor to pose ambiguities.
+This suggests a modification to imaging protocols for measuring TKA kinematics is needed to minimize the number of images that fall into the “ambiguous zone”.
+Instead of “pure lateral” imaging that attempts to perfectly center the knee in the image frame, we suggest positioning the center of the knee 1–2 inches away from the center of projection, and to rotate the plane of the observed leg by 5 degrees from parallel with the image detector.
+These small adjustments to the imager/patient alignment would cause all kinematics to have $\psi > 5^{\circ}$, which improves classification accuracy by at least 20\%. Similar imaging protocol improvements have been proposed for bi-plane RSA\cite{niesenReorientingTibialBaseplate2020}.
 
+This study has some limitations. In this study, we use human-supervised kinematics from single-plane images, where there is always the possibility that the human operator fell into error when distinguishing between “true” and “symmetry trap” poses in a sequence of images. This can occur due to a myriad of factors, including low image quality and near-lateral imaging angles. To mitigate this, validated ground truth kinematics would be necessary to create a robust algorithm without any errors in the training data.
 
-The dataset constructed in this study assumes that the femoral implant has been properly registered with correct kinematics.
-Often, this is not an issue because most femoral implants are asymmetric, and have an extremely low likelihood of falling into their own 'symmetry traps' \cite{jensenJointTrackMachine2023}.
-However, improper registration of both a symmetric tibial implant and symmetric femoral implant would decrease the feasibility of the proposed procedure.
-
-
-This study presents a novel method of overcoming one of the most pernicious issues facing researchers measuring TKA kinematics from single-plane fluoroscopy.
-Our algorithm combines 3 elements (1) calculating 'symmetry trap' poses from 'true' poses, (2) classical machine learning algorithms to classify a single pose as 'true' or 'symmetry trap' and (3) a procedure that applies those machine learning outputs to a contiguous sequence of kinematics to construct a spline and correct symmetry traps in real-world data.
-Further, our results suggest slight alterations to imaging angles could reduce errors due to ambiguous poses resulting from symmetrical tibial implants.
-We believe that this method, along with recent advancements in autonomous kinematics measurements, will soon make it practical to perform dynamic TKA kinematics measurements in a clinical setting without the inherent limitations of single-plane radiographic imaging.
+The correction algorithm recommended in this study assumes that the femoral implant has been properly registered with correct kinematics. While this is typically a good assumption because most femoral implants are asymmetric, and have an extremely low likelihood of falling into their own “symmetry traps” \cite{jensenJointTrackMachine2023}, improper registration of both a symmetric tibial implant and symmetric femoral implant would decrease the feasibility of the proposed procedure.
 
 \section{Conclusion}
-Our three-stage approach to correcting 'symmetry traps' that arise from symmetric tibial implants when performing kinematics measurements on single-plane imaging provides a groundbreaking solution to a problem facing researchers in the field for nearly three decades.
-Further, the “symmetric flipper” algorithm provides a strong foundational approach for any symmetric object in a weak-perspective paradigm and can drastically reduce the complexity of many optimization algorithms by reducing the search space.
+This study presents a novel method of overcoming one of the most pernicious issues facing researchers measuring TKA kinematics from single-plane fluoroscopy.
+Our algorithm combines 3 elements (1) calculating “symmetry trap” poses from “true” poses, (2) classical machine learning algorithms to classify a single pose as “true” or “symmetry trap” and (3) a procedure that applies those machine learning outputs to a contiguous sequence of kinematics to construct a spline and correct symmetry traps in real-world data.
+Additionally, the “symmetric flipper” algorithm provides a strong foundational approach for any symmetric object in a weak-perspective paradigm and can drastically reduce the complexity of many optimization algorithms by reducing the search space.
 Because this algorithm is model-agnostic, it could be used in many applications where orientation ambiguities arise.
-This approach further refines the ability for a fully autonomous kinematics measurement platform, bringing it one step closer to being a clinically viable technology, where these measures can help surgeons objectively determine the best course of treatment for their patients.
-
+Our results also suggest slight alterations to imaging angles, which could reduce errors due to ambiguous poses resulting from symmetrical tibial implants.
+We believe that this method, along with recent advancements in autonomous kinematics measurements, will soon make it practical to perform dynamic TKA kinematics measurements in a clinical setting without the inherent limitations of single-plane radiographic imaging.
 
 
 %%% Local Variables:
